@@ -85,6 +85,8 @@ namespace Mono.Cecil.Cil {
 			MethodBody body = instructions.Container;
 			long start = m_codeWriter.BaseStream.Position;
 
+			ComputeMaxStack (instructions);
+
 			foreach (Instruction instr in instructions) {
 
 				instr.Offset = (int) (m_codeWriter.BaseStream.Position - start);
@@ -353,6 +355,75 @@ namespace Mono.Cecil.Cil {
 				lvs.LocalVariables [i] = lv;
 			}
 			return lvs;
+		}
+
+		void ComputeMaxStack (IInstructionCollection instructions)
+		{
+			InstructionCollection ehs = new InstructionCollection (null);
+			foreach (ExceptionHandler eh in instructions.Container.ExceptionHandlers)
+				switch (eh.Type) {
+				case ExceptionHandlerType.Catch :
+					ehs.Add (eh.HandlerStart);
+					break;
+				case ExceptionHandlerType.Filter :
+					ehs.Add (eh.FilterStart);
+					break;
+				}
+
+			int max = 0, current = 0;
+			foreach (Instruction instr in instructions) {
+
+				if (ehs.Contains (instr))
+					current++;
+
+				switch (instr.OpCode.StackBehaviourPush) {
+				case StackBehaviour.Push1:
+				case StackBehaviour.Pushi:
+				case StackBehaviour.Pushi8:
+				case StackBehaviour.Pushr4:
+				case StackBehaviour.Pushr8:
+				case StackBehaviour.Pushref:
+				case StackBehaviour.Varpush:
+					current++;
+					break;
+				case StackBehaviour.Push1_push1:
+					current += 2;
+					break;
+				}
+
+				if (max < current)
+					max = current;
+
+				switch (instr.OpCode.StackBehaviourPop) {
+				case StackBehaviour.Varpop:
+					break;
+				case StackBehaviour.Pop1:
+				case StackBehaviour.Popi:
+				case StackBehaviour.Popref:
+					current--;
+					break;
+				case StackBehaviour.Pop1_pop1:
+				case StackBehaviour.Popi_pop1:
+				case StackBehaviour.Popi_popi:
+				case StackBehaviour.Popi_popi8:
+				case StackBehaviour.Popi_popr4:
+				case StackBehaviour.Popi_popr8:
+				case StackBehaviour.Popref_pop1:
+				case StackBehaviour.Popref_popi:
+					current -= 2;
+					break;
+				case StackBehaviour.Popi_popi_popi:
+				case StackBehaviour.Popref_popi_popi:
+				case StackBehaviour.Popref_popi_popi8:
+				case StackBehaviour.Popref_popi_popr4:
+				case StackBehaviour.Popref_popi_popr8:
+				case StackBehaviour.Popref_popi_popref:
+					current -= 3;
+					break;
+				}
+			}
+
+			instructions.Container.MaxStack = max;
 		}
 	}
 }
