@@ -1,5 +1,8 @@
 2005-10-27  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Cil/CodeWriter.cs:
+		Compute max stack before writing method.
+
 	* Mono.Cecil/GenericContext.cs
 	  Mono.Cecil/ReflectionReader.cs
 	  Mono.Cecil.Signatures/SignatureReader.cs:
